<resources>
  <string name="app_name">צופים+</string>
  <string name="nav_home">בית</string>
  <string name="nav_activities">פעילויות</string>
  <string name="nav_members">חניכים</string>
  <string name="nav_profile">פרופיל</string>
  <string name="login">כניסה</string>
  <string name="login_caption">התחברו כדי להמשיך למערכת.</string>
  <string name="nav_dashboard">לוח בקרה</string>
  <string name="nav_progress">התקדמות</string>
  <string name="nav_communication">תקשורת</string>
  <string name="nav_reports">דוחות</string>
  <string name="nav_settings">הגדרות</string>
  <string name="nav_logout">התנתקות</string>
  <string name="proposed_program">תוכנית מוצעת</string>
  <string name="program_string">תוכן התוכנית</string>
    <string name="pupils_name">שם</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="soon_activitys">פעילויות קרובות</string>
    <string name="login_submit_button">כניסה</string>
    <string name="reports_and_data">דוחות ונתונים</string>
    <string name="view_scouts_clan_activities">צפו בביצועי השבט, נוכחות חניכים וסיכומי פעילות.</string>
</resources>
