<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_dashboard"
      android:title="@string/nav_dashboard" />
    <item
      android:id="@+id/nav_members"
      android:title="@string/nav_members" />
    <item
      android:id="@+id/nav_activities"
      android:title="@string/nav_activities" />
    <item
      android:id="@+id/nav_progress"
      android:title="@string/nav_progress" />
    <item
      android:id="@+id/nav_communication"
      android:title="@string/nav_communication" />
    <item
      android:id="@+id/nav_reports"
      android:title="@string/nav_reports" />
  </group>
  <item
    android:id="@+id/nav_settings"
    android:title="@string/nav_settings" />
  <item
    android:id="@+id/nav_logout"
    android:title="@string/nav_logout" />
</menu>
